--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,91 @@ html {
     @apply bg-gradient-to-b from-indigo-600 to-indigo-400 bg-clip-text text-transparent;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-800;
+  /* background-color: #6b46c1; /* dark purple / */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f3e8ff;
+}
+
+.main {
+  padding: 2em 0;
+}
+
+.main p {
+  /* font-family: "Source Sans Pro", sans-serif; */
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.4em;
+}
+.main .timeline {
+  position: relative;
+}
+.main .timeline:before {
+  background: #7947e7;
+  content: "";
+  height: 100%;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 4px;
+}
+.main .timeline .timeline-item {
+  clear: both;
+  list-style-type: none;
+  padding: 0 30px;
+  position: relative;
+}
+.main .timeline .timeline-item:before {
+  background: #6260ec;
+  border-radius: 50%;
+  content: "";
+  height: 20px;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  width: 20px;
+}
+.main .timeline .timeline-item .timeline-content {
+  padding: 1em;
+}
+.main .timeline .timeline-item .timeline-content h3,
+.main .timeline .timeline-item .timeline-content p,
+.main .timeline .timeline-item .timeline-content button {
+  margin: 20px;
+}
+.main .timeline .timeline-item:nth-child(even) .timeline-content {
+  float: right;
+}
+.main .timeline .timeline-item:nth-child(2):before {
+  background: #6260ec;
+}
+.main .timeline .timeline-item:nth-child(3):before {
+  background: #6260ec;
+}
+@media screen and (max-width: 968px) {
+  .main .timeline {
+    margin: 0 0 0 10px;
+  }
+  .main .timeline:before {
+    left: 0px;
+  }
+  .main .timeline .timeline-item:before {
+    left: 0;
+  }
+  .main .timeline .timeline-item .timeline-content {
+    margin: 2em 0;
+    width: 100%;
+  }
+  .main .timeline .timeline-item:nth-child(even) .timeline-content {
+    float: initial;
+  }
+}
